--- a/src/main/resources/com/example/cs202igorromanic6138pz/hello-view.fxml
+++ b/src/main/resources/com/example/cs202igorromanic6138pz/hello-view.fxml
@@ -5,6 +5,8 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TableColumn?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.example.cs202igorromanic6138pz.HelloController">
   <padding>
